<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <item android:id="@+id/menu_home"
          android:icon="@drawable/ic_home_black_24dp"
          android:title="@string/menu_home"/>
    <item
            android:id="@+id/menu_search"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/menu_search"/>

    <item
            android:id="@+id/menu_tender"
            android:icon="@drawable/ic_menu_tender"
            android:title="@string/tender"/>

    <item
            android:id="@+id/menu_chat"
            android:icon="@drawable/ic_chat_bubble_outline_black_24dp"
            android:title="@string/menu_chat"/>
    <item
            android:id="@+id/menu_services"
            android:icon="@drawable/ic_people_outline_black_24dp"
            android:title="@string/menu_services"/>
    <item
            android:id="@+id/menu_bookmarks"
            android:icon="@drawable/ic_bookmark_border_black_24dp"
            android:title="@string/menu_bookmarks"/>
    <item
            android:id="@+id/menu_rate"
            android:icon="@drawable/ic_5star_black"
            android:title="@string/menu_rate"/>
    <group android:id="@+id/about_group" android:enabled="true" android:visible="true">

        <item
            android:id="@+id/menu_about"
            android:icon="@drawable/ic_mood_black_24dp"
            android:title="@string/menu_about"/>
    <item
            android:id="@+id/menu_data_protection"
            android:icon="@drawable/ic_lock_outline_black_24dp"
            android:title="@string/menu_data_protection"/>
    <item
            android:id="@+id/menu_contact"
            android:icon="@drawable/ic_mail_outline_black_24dp"
            android:title="@string/menu_contact"/>

    </group>

    <group android:id="@+id/out_group" android:enabled="true" android:visible="true">

        <item
                android:id="@+id/menu_logout"
                android:icon="@drawable/ic_undo_black_24dp"
                android:title="@string/menu_logout"/>
        <item
                android:id="@+id/menu_delete"
                android:icon="@drawable/ic_block_black_24dp"
                android:title="@string/menu_delete"/>

    </group>

</menu>
