<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        android:id="@+id/parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.login.EmailLoginActivity" android:background="@mipmap/login_activity_background">

    <android.support.design.widget.TextInputLayout
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:id="@+id/email_layout"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signupTextView">

        <android.support.design.widget.TextInputEditText
                android:id="@id/email"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:hint="@string/email_hint"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordLayout"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:ems="10"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/email_layout" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent">

        <android.support.design.widget.TextInputEditText
                android:hint="@string/password_hint"
                android:id="@+id/passwordEditText"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>


    <Button
            android:id="@+id/loginBtn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="34dp"
            android:text="@string/login_button_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordLayout"
            android:background="@drawable/email_btn_background"
            android:fontFamily="@font/montserrat"
            android:textColor="@android:color/white"
            android:textAllCaps="false"/>

    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:visibility="gone" android:overScrollMode="always"/>
    <TextView
            android:text="@string/forgot_password_text"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/forgott_password"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:fontFamily="@font/montserrat" android:typeface="normal"
            android:textSize="14sp" android:textColor="@color/design_default_color_primary_dark"
            android:textStyle="italic" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/loginBtn"/>
    <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pick_image_dialog_title" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent" android:textSize="24sp"
            android:textColor="@color/white"/>
    <TextView
            android:text="@string/signup_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signupTextView" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/pick_image_dialog_title" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textSize="14sp" android:fontFamily="@font/montserrat"
            android:textColor="@color/colorPrimary"/>
</android.support.constraint.ConstraintLayout>