<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        android:id="@+id/parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/login_activity_background">


    <android.support.design.widget.TextInputLayout
            android:id="@+id/email_layout"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="50dp"
            app:hintAnimationEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/subtitle">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordLayout"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:ems="10"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/email_layout"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent">

        <android.support.design.widget.TextInputEditText
                android:hint="@string/password_hint"
                android:id="@+id/passwordEditText"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordLayout2"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:ems="10"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/passwordLayout"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent">

        <android.support.design.widget.TextInputEditText
                android:hint="@string/password2_hint"
                android:id="@+id/passwordEditText2"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>


    <Button
            android:text="@string/signup_button_text"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/loginBtn" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:background="@drawable/email_btn_background" android:fontFamily="@font/montserrat"
            android:textColor="@android:color/white" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/passwordLayout2"/>
    <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pick_image_dialog_title" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent" android:textSize="24sp"
            android:textColor="@color/white"/>
    <TextView
            android:text="@string/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/subtitle" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/pick_image_dialog_title"
            android:textColor="@color/white" android:fontFamily="@font/italiana" android:typeface="normal"
            android:textSize="14sp"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:visibility="gone"/>


</android.support.constraint.ConstraintLayout>