<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.login.SmsLoginActivity"
        android:background="@mipmap/login_activity_background">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sms_login_info_text"
            android:fontFamily="@font/montserrat"
            android:typeface="normal"
            android:textStyle="italic"
            android:text="@string/sms_info_text"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:lineSpacingExtra="2sp"
            android:maxLines="5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/subtitle"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"/>


    <android.support.design.widget.TextInputLayout
            android:id="@+id/tel_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            app:hintAnimationEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sms_login_info_text">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tel_hint"
                android:fontFamily="@font/montserrat"
                android:typeface="normal"
                android:textColor="@color/colorPrimary"
                android:inputType="phone"
                android:singleLine="true"
                android:textSize="18sp"/>
    </android.support.design.widget.TextInputLayout>

    <Button
            android:text="@string/send_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/sendBtn" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/tel_layout"
            android:background="@color/colorPrimary" android:textColor="@color/white" android:textStyle="bold"
            android:fontFamily="@font/montserrat" android:typeface="normal" android:textAllCaps="false"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sms_login_progressbar"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:visibility="gone"/>
    <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pick_image_dialog_title" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent" android:textSize="24sp"
            android:textColor="@color/white"/>
    <TextView
            android:text="@string/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/subtitle" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/pick_image_dialog_title"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:fontFamily="@font/italiana" android:typeface="normal"
            android:textSize="14sp" android:textColor="@color/white"/>

</android.support.constraint.ConstraintLayout>