<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


    <TextView
            android:text="@string/pickImageDialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pick_image_dialog_title"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent" android:textStyle="bold"
            android:fontFamily="@font/montserrat" android:textSize="18sp" android:textColor="@color/colorPrimary"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/pick_image_dialog_title" android:id="@+id/linearLayout2">
        <LinearLayout
                android:id="@+id/layout_camera"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_marginTop="16dp" android:layout_marginStart="32dp"
                android:layout_marginBottom="16dp" android:layout_marginEnd="32dp">
            <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp" app:srcCompat="@drawable/ic_photo_camera_black_24dp"
                    android:id="@+id/imageView2" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp" android:layout_marginTop="8dp"/>
            <TextView
                    android:text="@string/pickImageDialog_camera"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView2"
                    android:textColor="@color/colorPrimary" android:fontFamily="@font/montserrat"
                    android:typeface="normal" android:textAlignment="center"/>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/layout_gallery"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_marginTop="16dp" android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp" android:layout_marginBottom="16dp">
            <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp" app:srcCompat="@drawable/ic_photo_black_24dp"
                    android:id="@+id/imageView3" android:layout_marginBottom="8dp" android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp" android:layout_marginTop="8dp"/>
            <TextView
                    android:text="@string/pickImageDialog_gallery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView3" android:textAlignment="center"
                    android:fontFamily="@font/montserrat" android:typeface="normal"
                    android:textColor="@color/colorPrimary"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
            android:text="@string/pickImageDialog_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pick_image_dialog_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            android:fontFamily="@font/montserrat" android:typeface="normal" android:textColor="@color/colorPrimary"
            android:textStyle="bold" android:textAlignment="center" android:textSize="18sp"/>
</android.support.constraint.ConstraintLayout>